--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "davidgorges/human-name-parser",
+    "name": "ddosanjh/human-name-parser",
     "description": "Parses a human name",
     "license": "MIT",
     "authors": [
@@ -12,14 +12,12 @@
             "email": "jason@jasonpriem.com"
         }
     ],
-    "require": {
-        "php": ">=7.1"
+    "autoload": {
+        "classmap": [
+            "src/"
+        ]
     },
     "require-dev": {
-        "phpunit/phpunit": "7.*",
-        "phpstan/phpstan-shim": "^0.12.0"
-    },  
-    "autoload": {
-        "psr-4": {"HumanNameParser\\": "src/HumanNameParser"}
+        "phpunit/phpunit": "^9"
     }
 }
