--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,21 @@
 {
-    "name": "ddosanjh/human-name-parser",
-    "description": "Parses a human name",
+    "name": "thomas14/human-name-parser",
+    "description": "Takes human names of arbitrary complexity and various wacky formats and parses them out.",
+    "type": "library",
+    "require-dev": {
+        "phpunit/phpunit": "^9"
+    },
     "license": "MIT",
+    "autoload": {
+        "psr-4": {
+            "Thomas14\\HumanNameParser\\": "src/"
+        }
+    },
     "authors": [
+        {
+            "name": "Thomas14",
+            "email": "Thomas14@users.noreply.github.com"
+        },
         {
             "name": "David Gorges",
             "email": "david.gorges@leaphub.de"
@@ -12,12 +25,5 @@
             "email": "jason@jasonpriem.com"
         }
     ],
-    "autoload": {
-        "classmap": [
-            "src/"
-        ]
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^9"
-    }
+    "require": {}
 }
